im not making this lol

--- a/index.html
+++ b/index.html
@@ -7,15 +7,7 @@
     <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
-    <button id="start" onclick="load()">start</button>
-    <div id="box1"></div>
-    <div id="box2"></div>
-    <div id="box3"></div>
-    <div id="box4"></div>
-    <div id="box5"></div>
-    <div id="box6"></div>
-    <div id="box7"></div>
-    <div id="box8"></div>
+    <canvas width="900" height="500" id="canvas"></canvas>
     <script src="./script.js"></script>
 </body>
 </html>
